# ESGF_LLM_Experiments

./: .gitignore  COMPOUND_HAZARD_RESEARCH.md  COMPOUND_HAZARD_STUDY.md  LICENSE  README.md  SESSION_SUMMARY.md  doe_cmip6_holdings.json  pyproject.toml
Artifacts/: agricultural_summary.json  compound_hazard_seasonal_summary.json  compound_hazard_summary.json  consecutive_summary.json  heat_stress_summary.json  mitigation_summary.json  teleconnection_summary.json
examples/: fix_consecutive_plots.py  llm_search.py  plot_combined.py  plot_gpp_regions.py  regenerate_figures_with_coastlines.py  run_agricultural_impact.py  run_compound_hazard_analysis.py  run_consecutive_events.py  run_gpp_analysis.py  run_heat_stress_analysis.py  run_mitigation_comparison.py  run_regional_analysis.py  run_regional_chicago_nz.py  run_seasonal_compound_analysis.py  run_teleconnection_analysis.py  run_temperature_argonne.py  run_temperature_doe.py  run_temperature_globus.py  run_temperature_ornl.py  test_client.py
src/esgf_llm/: __init__.py  esgf_client.py  llm_interface.py
studies/: AGRICULTURAL_IMPACT_STUDY.md  COMPOUND_HAZARD_STUDY.md  HEAT_STRESS_STUDY.md  TELECONNECTION_STUDY.md
